Pre-final ver